--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ input[type=text], input[type=number] {
 	display: inline-block;
 	vertical-align: middle;
 	width: 100%;
+	margin-top: 5px;
 }
 
 .results label {
